bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:4: error: type mismatch;
 found   : Unit
 required: Boolean
  }else if(talking){
        ^